--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </section>
-    </section>
+        </section>
 
         <section class="icons-block">
             <div class="container">
@@ -89,12 +89,150 @@
         </section>
     
         <section class="pictures-block">
-            <div class="first-line-pictures">
-                <img class="line-picture" src="./images/secondblock1.jpg" alt="first-picture">
-                <img class="line-picture" src="./images/secondblock2.jpg" alt="second-picture">
-                <img class="line-picture" src="./images/secondblock3.jpg" alt="third-picture">
-                <img class="line-picture" src="./images/secondblock4.jpg" alt="fourth-picture">
+                <div class="test-img front-first-line-picture">
+                    <p class="test-link project-link">Project name</p>
+                    <p class="test-link">User Interface Design</p>
+                </div>
+                <div class="test-img front-second-line-picture">
+                    <p class="test-link project-link">Project name</p>
+                    <p class="test-link">User Interface Design</p>
+                </div>
+                <div class="test-img front-third-line-picture">
+                    <p class="test-link project-link">Project name</p>
+                    <p class="test-link">User Interface Design</p>
+                </div>
+                <div class="test-img front-fourth-line-picture">
+                    <p class="test-link project-link">Project name</p>
+                    <p class="test-link">User Interface Design</p>
+                </div>
+                <div class="test-img front-fifth-line-picture">
+                    <p class="test-link project-link">Project name</p>
+                    <p class="test-link">User Interface Design</p>
+                </div>
+                <div class="test-img front-sixth-line-picture">
+                    <p class="test-link project-link">Project name</p>
+                    <p class="test-link">User Interface Design</p>
+                </div>
+                <div class="test-img front-seventh-line-picture">
+                    <p class="test-link project-link">Project name</p>
+                    <p class="test-link">User Interface Design</p>
+                </div>
+                <div class="test-img front-eighth-line-picture">
+                    <p class="test-link project-link">Project name</p>
+                    <p class="test-link">User Interface Design</p>
+                </div>
+        </section>
+
+        <section class="persons-block">
+            <div class="container">
+                <div class="persons-container-block">
+                    <div class="person-description">
+                        <img class="person-image" src="./images/person1.jpg" alt="">
+                        <p class="person-title">Ruth Woods</p>
+                        <p class="person-subtitle">Founder, CEO</p>
+                        <p class="person-text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+                        <div class="social-icons">
+                            <i class="icon fab fa-facebook-f"></i>
+                            <i class="icon fab fa-twitter"></i>
+                            <i class="icon fab fa-linkedin"></i>
+                        </div>
+                    </div>
+                    <div class="person-description">
+                        <img class="person-image" src="./images/person2.jpg" alt="">
+                        <p class="person-title">Timothy Reed</p>
+                        <p class="person-subtitle">Co-Founder, Developer</p>
+                        <p class="person-text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+                        <div class="social-icons">
+                            <i class="icon fab fa-facebook-f"></i>
+                            <i class="icon fab fa-twitter"></i>
+                            <i class="icon fab fa-linkedin"></i>
+                        </div>
+                    </div>
+                    <div class="person-description">
+                        <img class="person-image" src="./images/person3.jpg" alt="">
+                        <p class="person-title">Victoria Valdez</p>
+                        <p class="person-subtitle">UI Designer</p>
+                        <p class="person-text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+                        <div class="social-icons">
+                            <i class="icon fab fa-facebook-f"></i>
+                            <i class="icon fab fa-twitter"></i>
+                            <i class="icon fab fa-linkedin"></i>
+                        </div>
+                    </div>
+                    <div class="person-description">
+                        <img class="person-image" src="./images/person4.jpg" alt="">
+                        <p class="person-title">Beverly Little</p>
+                        <p class="person-subtitle">Data Scientist</p>
+                        <p class="person-text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+                        <div class="social-icons">
+                            <i class="icon fab fa-facebook-f"></i>
+                            <i class="icon fab fa-twitter"></i>
+                            <i class="icon fab fa-linkedin"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section
+
+        <section class="review">
+        </section>
+
+        <section class="slider">
+         <div class="slider-container">
+            <div class="girl-picture">
+                <img class="girl-slide" src="./images/girl.jpg" alt="girl">
+            </div>
+            <div class="slider-content">
+                <p class="slider-title">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
+                <p class="slider-text">Susan Sims, Interaction Designer at XYZ</p>
+                <ul class="circle">
+                    <li class="round"></li>
+                    <li class="round"></li>
+                    <li class="round"></li>
+                    <li class="round"></li>
+                    <li class="round"></li>
+                </ul>
+            </div>
+        </div>
+        </section>
+
+        <section class="download">
+            <div class="container">
+                <p class="download-title">Are You Ready to Start? Download Now For Free!</p>
+                <p class="download-subtitle">Fusce dapibus, tellus ac cursus commodo</p>
+                <div class="download-button">
+                    <p class="download-button-text">Download Here</p>
+                </div>
             </div>
         </section>
+
+        <section class="about">
+            <div class="container">
+                <div class="about-content">
+                    <div class="location">
+                        <p class="about-title">location</p>
+                        <p class="about-text">3481 Melrose Place Beverly Hills, CA 90210</p>
+                    </div>
+                    <div class="share">
+                        <p class="about-title">Share with Love</p>
+                        <div class="white social-icons">
+                            <i class="icon-white fab fa-facebook-f"></i>
+                            <i class="icon-white fab fa-twitter"></i>
+                            <i class="icon-white fab fa-linkedin"></i>
+                        </div>
+                    </div>
+                    <div class="active">
+                        <p class="about-title">About ActiveBox</p>
+                        <p class="about-text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="copy"> 
+            <p class="copy-text">Copyright © 2015 ActiveBox. All Rights Reserved
+                Made with <i class="fas fa-heart"></i> <span class="by">by Kamal Chaneman</span></p>
+        </footer>
+
     </div>
 </body>
